[Bugfix Header]: Aligned items to the right and fixed responsive bug when screen got below 1024px

--- a/movie-catalog/src/app/components/header/header.component.scss
+++ b/movie-catalog/src/app/components/header/header.component.scss
@@ -1,6 +1,7 @@
 @import '../../../assets/scss/variables';
 
 .navbar {
+  position: relative;
   height: 65px;
   background-color: #212121;
   padding: 0 47px;
@@ -14,6 +15,10 @@
   }
 
   .navbar-nav {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+
     .nav-item {
       margin-right: 10px;
     }
@@ -25,10 +30,8 @@
     }
   }
 
-  @media (max-width: $breakpoint-xsmall) {
-    height: auto;
-    padding: 0 15px;
 
+  @media (max-width: $breakpoint-medium) {
     .listMenu {
       display: none;
     }
@@ -41,8 +44,10 @@
   color:#fff;
   background-color: #212121;
   border: none;
-
-  @media (max-width: $breakpoint-xsmall) {
+  position: absolute;
+  right: 10px;
+  
+  @media (max-width: $breakpoint-medium) {
     display: block;
     width: 35px;
     height: 35px;
